ex6/testdata/typechecker/error/ArrayTest-err1.java
class ArrayTest {
	public static void main(String[] a){
            int[] b;
            int c;
            b = new int[false]; // TE
	}
}

